--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ header nav ul {
       align-items: center;
 }
 
-header nav ul li {
+header nav ul a {
       list-style: none;
       font-family: 'Dosis', sans-serif;
       font-size: 220%;
